--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Noto Sans KR', 'Roboto', sans-serif;
+      letter-spacing: -0.75px;
+      word-break: keep-all;
+      text-align: justify;
     }
   </style>
   <title>React :: Clone Netflix UI</title>
